// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders correctly 1`] = `
<DocumentFragment>
  <script
    type="application/ld+json"
  >
    {"@context":"https://schema.org","@type":"HowTo","steps":[{"@type":"HowToStep","text":"Connect to a MongoDB deployment hosted on MongoDB Atlas, or a deployment hosted locally on your own machine.To learn more, see Connect to MongoDB","name":"Connect to your deployment"},{"@type":"HowToStep","text":"Import data from CSV or JSON files into your MongoDB database.To learn more, see Import and Export Data","name":"Import your data"}],"name":"Connect to a MongoDB deployment hosted on MongoDB Atlas","image":"https://webimages.mongodb.com/_com_assets/cms/kuyj2focmkbxv7gh3-stacked_default_slate_blue.svg?auto=format%252Ccompress"}
  </script>
  .emotion-0 {
  margin-top: 16px;
}

.dark-theme .emotion-0 {
  color: #E8EDEB;
  background-color: #001E2B;
}

@media only screen and (max-width: 1024px) {
  .emotion-0 {
    padding-bottom: 32px;
  }
}

@media only screen and (max-width: 480px) {
  .emotion-0 {
    padding-bottom: 24px;
  }
}

.emotion-1 {
  position: relative;
  gap: 33px;
}

.emotion-1 h2,
.emotion-1 h3,
.emotion-1 h4 {
  margin-top: 4px;
}

.emotion-1:not(:last-child):before {
  content: '';
  border-left: 2px dashed #E8EDEB;
  bottom: 0;
  left: 16px;
  position: absolute;
  top: 0;
}

.dark-theme .emotion-1:not(:last-child):before {
  border-left-color: #5C6C75;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  position: relative;
  min-height: 59px;
}

.emotion-4 {
  position: relative;
  font-weight: bold;
  background-color: #E3FCF7;
  color: #00684A;
  height: 34px;
  width: 34px;
}

.dark-theme .emotion-4 {
  background-color: #00684A;
  color: #E8EDEB;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 {
  padding-bottom: 64px;
}

@media only screen and (max-width: 767px) {
  .emotion-6 {
    padding-bottom: 40px;
  }
}

@media only screen and (max-width: 480px) {
  .emotion-6 {
    padding-bottom: 32px;
  }
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          1
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <p
          class="Text-module__2xN8W_text Text-module__2xN8W_body Text-module__2xN8W_large colorScheme-module_uDd7va_auto paragraph"
          data-display="p"
        >
          Connect to a MongoDB deployment hosted on MongoDB Atlas, or a deployment hosted locally on your own machine.
        </p>
        <p
          class="Text-module__2xN8W_text Text-module__2xN8W_body Text-module__2xN8W_large colorScheme-module_uDd7va_auto paragraph"
          data-display="p"
        >
          <a
            class="link"
            href="/connect/#std-label-connect-run-compass"
          >
            To learn more, see Connect to MongoDB
          </a>
        </p>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          2
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <p
          class="Text-module__2xN8W_text Text-module__2xN8W_body Text-module__2xN8W_large colorScheme-module_uDd7va_auto paragraph"
          data-display="p"
        >
          Import data from CSV or JSON files into your MongoDB database.
        </p>
        <p
          class="Text-module__2xN8W_text Text-module__2xN8W_body Text-module__2xN8W_large colorScheme-module_uDd7va_auto paragraph"
          data-display="p"
        >
          <a
            class="link"
            href="/import-export/#std-label-compass-import-export"
          >
            To learn more, see Import and Export Data
          </a>
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders steps nested in include nodes 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-top: 16px;
}

.dark-theme .emotion-0 {
  color: #E8EDEB;
  background-color: #001E2B;
}

@media only screen and (max-width: 1024px) {
  .emotion-0 {
    padding-bottom: 32px;
  }
}

@media only screen and (max-width: 480px) {
  .emotion-0 {
    padding-bottom: 24px;
  }
}

.emotion-1 {
  position: relative;
  gap: 33px;
}

.emotion-1 h2,
.emotion-1 h3,
.emotion-1 h4 {
  margin-top: 4px;
}

.emotion-1:not(:last-child):before {
  content: '';
  border-left: 2px dashed #E8EDEB;
  bottom: 0;
  left: 16px;
  position: absolute;
  top: 0;
}

.dark-theme .emotion-1:not(:last-child):before {
  border-left-color: #5C6C75;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  position: relative;
  min-height: 59px;
}

.emotion-4 {
  position: relative;
  font-weight: bold;
  background-color: #E3FCF7;
  color: #00684A;
  height: 34px;
  width: 34px;
}

.dark-theme .emotion-4 {
  background-color: #00684A;
  color: #E8EDEB;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 {
  padding-bottom: 64px;
}

@media only screen and (max-width: 767px) {
  .emotion-6 {
    padding-bottom: 40px;
  }
}

@media only screen and (max-width: 480px) {
  .emotion-6 {
    padding-bottom: 32px;
  }
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          1
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <section>
          <div
            class="copyMarkdownRow"
          >
            <h1
              class="Text-module__2xN8W_text Text-module__2xN8W_heading2 colorScheme-module_uDd7va_auto contains-headerlink sectionMargin titleMargin"
              data-display="h2"
            >
              Step 1
              <a
                class="headerlink heading"
                href="#step-1"
                title="Permalink to this heading"
              >
                <svg
                  aria-label="Svg Link Icon"
                  aria-labelledby="react-aria-:r2:"
                  class="Icon-module_yNB47q_icon icon"
                  fill="none"
                  height="12"
                  role="img"
                  slot="icon"
                  viewBox="0 0 16 16"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.039 9.953a4 4 0 0 1-.327-.38l1.45-1.445q.11.226.294.414a1.553 1.553 0 0 0 2.203.01l2.884-2.872a1.57 1.57 0 0 0 .01-2.212 1.553 1.553 0 0 0-2.203-.01l-.379.377A.995.995 0 0 1 8.56 3.83a1.005 1.005 0 0 1 .006-1.418l.38-.377a3.54 3.54 0 0 1 5.024.023 3.58 3.58 0 0 1-.022 5.047l-2.884 2.871a3.54 3.54 0 0 1-5.025-.022"
                    fill="currentColor"
                  />
                  <path
                    d="M9.961 6.047q.18.181.327.38l-1.45 1.445q-.11-.226-.294-.414a1.553 1.553 0 0 0-2.203-.01L3.457 10.32a1.57 1.57 0 0 0-.01 2.212 1.553 1.553 0 0 0 2.203.01l.379-.377a.995.995 0 0 1 1.411.006 1.005 1.005 0 0 1-.006 1.418l-.38.377a3.54 3.54 0 0 1-5.024-.023 3.58 3.58 0 0 1 .022-5.047l2.884-2.871a3.54 3.54 0 0 1 5.025.022"
                    fill="currentColor"
                  />
                </svg>
                <div
                  class="headerBuffer"
                  id="step-1"
                />
              </a>
            </h1>
            <div
              aria-label="Copy page options"
              class="adjacent-button-layout-module_RWPzsq_adjacentButtonGroup ButtonGroup-module_Rql9sq_buttonGroup colorScheme-module_uDd7va_auto splitButton copyMarkdownButton"
              data-orientation="horizontal"
              data-variant="default"
              role="group"
            >
              <button
                class="Button-module_LY8NSq_button focus-ring-module_CnED2W_ring Button-module_LY8NSq_small adjacent-button-layout-module_RWPzsq_adjacentButton colorScheme-module_uDd7va_auto"
                data-rac=""
                data-react-aria-pressable="true"
                data-via-adjacent="true"
                id="react-aria-:r4:"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-label="Svg Copy Icon"
                  aria-labelledby="react-aria-:r6:"
                  class="Icon-module_yNB47q_icon"
                  fill="none"
                  height="14"
                  role="img"
                  slot="icon"
                  viewBox="0 0 16 16"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M1 5.714v4.572C1 11.233 1.768 12 2.714 12H5.75V7.11c0-.566.227-1.108.63-1.504l2.294-2.252q.151-.148.326-.262v-.378C9 1.768 8.232 1 7.286 1H5.8v3.429c0 .71-.576 1.285-1.286 1.285zm8-.928L7.257 6.498A.86.86 0 0 0 7 7.11v.688h3.01a.857.857 0 0 0 .857-.858V4h-.717a.86.86 0 0 0-.6.246zM4.867 1H4.15a.86.86 0 0 0-.601.246L1.257 3.498A.86.86 0 0 0 1 4.11v.688h3.01a.857.857 0 0 0 .857-.858zM7 12V8.714h3.514c.71 0 1.286-.575 1.286-1.285V4h1.486C14.233 4 15 4.768 15 5.714v7.572c0 .947-.768 1.714-1.714 1.714H8.714A1.714 1.714 0 0 1 7 13.286z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
                Copy page
              </button>
              <button
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="More copy page options"
                class="Button-module_LY8NSq_button focus-ring-module_CnED2W_ring Button-module_LY8NSq_small Button-module_LY8NSq_isOnlyChild adjacent-button-layout-module_RWPzsq_adjacentButton colorScheme-module_uDd7va_auto"
                data-rac=""
                data-react-aria-pressable="true"
                data-via-adjacent="true"
                id="react-aria-:r7:"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  aria-label="Svg Caret Down Icon"
                  aria-labelledby="react-aria-:rb:"
                  class="Icon-module_yNB47q_icon"
                  fill="none"
                  height="14"
                  role="img"
                  slot="icon"
                  viewBox="0 0 16 16"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.679 10.796a.554.554 0 0 1-.858 0L4.64 6.976C4.32 6.594 4.582 6 5.069 6h6.362c.487 0 .748.594.43.976z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
          <p
            class="Text-module__2xN8W_text Text-module__2xN8W_body Text-module__2xN8W_large colorScheme-module_uDd7va_auto paragraph"
            data-display="p"
          >
            Content for step 1
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          2
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <section>
          <div
            class="copyMarkdownRow"
          >
            <h1
              class="Text-module__2xN8W_text Text-module__2xN8W_heading2 colorScheme-module_uDd7va_auto contains-headerlink sectionMargin titleMargin"
              data-display="h2"
            >
              Step 2
              <a
                class="headerlink heading"
                href="#step-2"
                title="Permalink to this heading"
              >
                <svg
                  aria-label="Svg Link Icon"
                  aria-labelledby="react-aria-:re:"
                  class="Icon-module_yNB47q_icon icon"
                  fill="none"
                  height="12"
                  role="img"
                  slot="icon"
                  viewBox="0 0 16 16"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.039 9.953a4 4 0 0 1-.327-.38l1.45-1.445q.11.226.294.414a1.553 1.553 0 0 0 2.203.01l2.884-2.872a1.57 1.57 0 0 0 .01-2.212 1.553 1.553 0 0 0-2.203-.01l-.379.377A.995.995 0 0 1 8.56 3.83a1.005 1.005 0 0 1 .006-1.418l.38-.377a3.54 3.54 0 0 1 5.024.023 3.58 3.58 0 0 1-.022 5.047l-2.884 2.871a3.54 3.54 0 0 1-5.025-.022"
                    fill="currentColor"
                  />
                  <path
                    d="M9.961 6.047q.18.181.327.38l-1.45 1.445q-.11-.226-.294-.414a1.553 1.553 0 0 0-2.203-.01L3.457 10.32a1.57 1.57 0 0 0-.01 2.212 1.553 1.553 0 0 0 2.203.01l.379-.377a.995.995 0 0 1 1.411.006 1.005 1.005 0 0 1-.006 1.418l-.38.377a3.54 3.54 0 0 1-5.024-.023 3.58 3.58 0 0 1 .022-5.047l2.884-2.871a3.54 3.54 0 0 1 5.025.022"
                    fill="currentColor"
                  />
                </svg>
                <div
                  class="headerBuffer"
                  id="step-2"
                />
              </a>
            </h1>
            <div
              aria-label="Copy page options"
              class="adjacent-button-layout-module_RWPzsq_adjacentButtonGroup ButtonGroup-module_Rql9sq_buttonGroup colorScheme-module_uDd7va_auto splitButton copyMarkdownButton"
              data-orientation="horizontal"
              data-variant="default"
              role="group"
            >
              <button
                class="Button-module_LY8NSq_button focus-ring-module_CnED2W_ring Button-module_LY8NSq_small adjacent-button-layout-module_RWPzsq_adjacentButton colorScheme-module_uDd7va_auto"
                data-rac=""
                data-react-aria-pressable="true"
                data-via-adjacent="true"
                id="react-aria-:rg:"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-label="Svg Copy Icon"
                  aria-labelledby="react-aria-:ri:"
                  class="Icon-module_yNB47q_icon"
                  fill="none"
                  height="14"
                  role="img"
                  slot="icon"
                  viewBox="0 0 16 16"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M1 5.714v4.572C1 11.233 1.768 12 2.714 12H5.75V7.11c0-.566.227-1.108.63-1.504l2.294-2.252q.151-.148.326-.262v-.378C9 1.768 8.232 1 7.286 1H5.8v3.429c0 .71-.576 1.285-1.286 1.285zm8-.928L7.257 6.498A.86.86 0 0 0 7 7.11v.688h3.01a.857.857 0 0 0 .857-.858V4h-.717a.86.86 0 0 0-.6.246zM4.867 1H4.15a.86.86 0 0 0-.601.246L1.257 3.498A.86.86 0 0 0 1 4.11v.688h3.01a.857.857 0 0 0 .857-.858zM7 12V8.714h3.514c.71 0 1.286-.575 1.286-1.285V4h1.486C14.233 4 15 4.768 15 5.714v7.572c0 .947-.768 1.714-1.714 1.714H8.714A1.714 1.714 0 0 1 7 13.286z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
                Copy page
              </button>
              <button
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="More copy page options"
                class="Button-module_LY8NSq_button focus-ring-module_CnED2W_ring Button-module_LY8NSq_small Button-module_LY8NSq_isOnlyChild adjacent-button-layout-module_RWPzsq_adjacentButton colorScheme-module_uDd7va_auto"
                data-rac=""
                data-react-aria-pressable="true"
                data-via-adjacent="true"
                id="react-aria-:rj:"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  aria-label="Svg Caret Down Icon"
                  aria-labelledby="react-aria-:rn:"
                  class="Icon-module_yNB47q_icon"
                  fill="none"
                  height="14"
                  role="img"
                  slot="icon"
                  viewBox="0 0 16 16"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.679 10.796a.554.554 0 0 1-.858 0L4.64 6.976C4.32 6.594 4.582 6 5.069 6h6.362c.487 0 .748.594.43.976z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
          <p
            class="Text-module__2xN8W_text Text-module__2xN8W_body Text-module__2xN8W_large colorScheme-module_uDd7va_auto paragraph"
            data-display="p"
          >
            Content for step 2
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          3
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <section>
          <div
            class="copyMarkdownRow"
          >
            <h1
              class="Text-module__2xN8W_text Text-module__2xN8W_heading2 colorScheme-module_uDd7va_auto contains-headerlink sectionMargin titleMargin"
              data-display="h2"
            >
              Step 3
              <a
                class="headerlink heading"
                href="#step-3"
                title="Permalink to this heading"
              >
                <svg
                  aria-label="Svg Link Icon"
                  aria-labelledby="react-aria-:rq:"
                  class="Icon-module_yNB47q_icon icon"
                  fill="none"
                  height="12"
                  role="img"
                  slot="icon"
                  viewBox="0 0 16 16"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.039 9.953a4 4 0 0 1-.327-.38l1.45-1.445q.11.226.294.414a1.553 1.553 0 0 0 2.203.01l2.884-2.872a1.57 1.57 0 0 0 .01-2.212 1.553 1.553 0 0 0-2.203-.01l-.379.377A.995.995 0 0 1 8.56 3.83a1.005 1.005 0 0 1 .006-1.418l.38-.377a3.54 3.54 0 0 1 5.024.023 3.58 3.58 0 0 1-.022 5.047l-2.884 2.871a3.54 3.54 0 0 1-5.025-.022"
                    fill="currentColor"
                  />
                  <path
                    d="M9.961 6.047q.18.181.327.38l-1.45 1.445q-.11-.226-.294-.414a1.553 1.553 0 0 0-2.203-.01L3.457 10.32a1.57 1.57 0 0 0-.01 2.212 1.553 1.553 0 0 0 2.203.01l.379-.377a.995.995 0 0 1 1.411.006 1.005 1.005 0 0 1-.006 1.418l-.38.377a3.54 3.54 0 0 1-5.024-.023 3.58 3.58 0 0 1 .022-5.047l2.884-2.871a3.54 3.54 0 0 1 5.025.022"
                    fill="currentColor"
                  />
                </svg>
                <div
                  class="headerBuffer"
                  id="step-3"
                />
              </a>
            </h1>
            <div
              aria-label="Copy page options"
              class="adjacent-button-layout-module_RWPzsq_adjacentButtonGroup ButtonGroup-module_Rql9sq_buttonGroup colorScheme-module_uDd7va_auto splitButton copyMarkdownButton"
              data-orientation="horizontal"
              data-variant="default"
              role="group"
            >
              <button
                class="Button-module_LY8NSq_button focus-ring-module_CnED2W_ring Button-module_LY8NSq_small adjacent-button-layout-module_RWPzsq_adjacentButton colorScheme-module_uDd7va_auto"
                data-rac=""
                data-react-aria-pressable="true"
                data-via-adjacent="true"
                id="react-aria-:rs:"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-label="Svg Copy Icon"
                  aria-labelledby="react-aria-:ru:"
                  class="Icon-module_yNB47q_icon"
                  fill="none"
                  height="14"
                  role="img"
                  slot="icon"
                  viewBox="0 0 16 16"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M1 5.714v4.572C1 11.233 1.768 12 2.714 12H5.75V7.11c0-.566.227-1.108.63-1.504l2.294-2.252q.151-.148.326-.262v-.378C9 1.768 8.232 1 7.286 1H5.8v3.429c0 .71-.576 1.285-1.286 1.285zm8-.928L7.257 6.498A.86.86 0 0 0 7 7.11v.688h3.01a.857.857 0 0 0 .857-.858V4h-.717a.86.86 0 0 0-.6.246zM4.867 1H4.15a.86.86 0 0 0-.601.246L1.257 3.498A.86.86 0 0 0 1 4.11v.688h3.01a.857.857 0 0 0 .857-.858zM7 12V8.714h3.514c.71 0 1.286-.575 1.286-1.285V4h1.486C14.233 4 15 4.768 15 5.714v7.572c0 .947-.768 1.714-1.714 1.714H8.714A1.714 1.714 0 0 1 7 13.286z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
                Copy page
              </button>
              <button
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="More copy page options"
                class="Button-module_LY8NSq_button focus-ring-module_CnED2W_ring Button-module_LY8NSq_small Button-module_LY8NSq_isOnlyChild adjacent-button-layout-module_RWPzsq_adjacentButton colorScheme-module_uDd7va_auto"
                data-rac=""
                data-react-aria-pressable="true"
                data-via-adjacent="true"
                id="react-aria-:rv:"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  aria-label="Svg Caret Down Icon"
                  aria-labelledby="react-aria-:r13:"
                  class="Icon-module_yNB47q_icon"
                  fill="none"
                  height="14"
                  role="img"
                  slot="icon"
                  viewBox="0 0 16 16"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.679 10.796a.554.554 0 0 1-.858 0L4.64 6.976C4.32 6.594 4.582 6 5.069 6h6.362c.487 0 .748.594.43.976z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
          <p
            class="Text-module__2xN8W_text Text-module__2xN8W_body Text-module__2xN8W_large colorScheme-module_uDd7va_auto paragraph"
            data-display="p"
          >
            Content for step 3
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          4
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <section>
          <div
            class="copyMarkdownRow"
          >
            <h1
              class="Text-module__2xN8W_text Text-module__2xN8W_heading2 colorScheme-module_uDd7va_auto contains-headerlink sectionMargin titleMargin"
              data-display="h2"
            >
              Step 4
              <a
                class="headerlink heading"
                href="#step-4"
                title="Permalink to this heading"
              >
                <svg
                  aria-label="Svg Link Icon"
                  aria-labelledby="react-aria-:r16:"
                  class="Icon-module_yNB47q_icon icon"
                  fill="none"
                  height="12"
                  role="img"
                  slot="icon"
                  viewBox="0 0 16 16"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.039 9.953a4 4 0 0 1-.327-.38l1.45-1.445q.11.226.294.414a1.553 1.553 0 0 0 2.203.01l2.884-2.872a1.57 1.57 0 0 0 .01-2.212 1.553 1.553 0 0 0-2.203-.01l-.379.377A.995.995 0 0 1 8.56 3.83a1.005 1.005 0 0 1 .006-1.418l.38-.377a3.54 3.54 0 0 1 5.024.023 3.58 3.58 0 0 1-.022 5.047l-2.884 2.871a3.54 3.54 0 0 1-5.025-.022"
                    fill="currentColor"
                  />
                  <path
                    d="M9.961 6.047q.18.181.327.38l-1.45 1.445q-.11-.226-.294-.414a1.553 1.553 0 0 0-2.203-.01L3.457 10.32a1.57 1.57 0 0 0-.01 2.212 1.553 1.553 0 0 0 2.203.01l.379-.377a.995.995 0 0 1 1.411.006 1.005 1.005 0 0 1-.006 1.418l-.38.377a3.54 3.54 0 0 1-5.024-.023 3.58 3.58 0 0 1 .022-5.047l2.884-2.871a3.54 3.54 0 0 1 5.025.022"
                    fill="currentColor"
                  />
                </svg>
                <div
                  class="headerBuffer"
                  id="step-4"
                />
              </a>
            </h1>
            <div
              aria-label="Copy page options"
              class="adjacent-button-layout-module_RWPzsq_adjacentButtonGroup ButtonGroup-module_Rql9sq_buttonGroup colorScheme-module_uDd7va_auto splitButton copyMarkdownButton"
              data-orientation="horizontal"
              data-variant="default"
              role="group"
            >
              <button
                class="Button-module_LY8NSq_button focus-ring-module_CnED2W_ring Button-module_LY8NSq_small adjacent-button-layout-module_RWPzsq_adjacentButton colorScheme-module_uDd7va_auto"
                data-rac=""
                data-react-aria-pressable="true"
                data-via-adjacent="true"
                id="react-aria-:r18:"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-label="Svg Copy Icon"
                  aria-labelledby="react-aria-:r1a:"
                  class="Icon-module_yNB47q_icon"
                  fill="none"
                  height="14"
                  role="img"
                  slot="icon"
                  viewBox="0 0 16 16"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M1 5.714v4.572C1 11.233 1.768 12 2.714 12H5.75V7.11c0-.566.227-1.108.63-1.504l2.294-2.252q.151-.148.326-.262v-.378C9 1.768 8.232 1 7.286 1H5.8v3.429c0 .71-.576 1.285-1.286 1.285zm8-.928L7.257 6.498A.86.86 0 0 0 7 7.11v.688h3.01a.857.857 0 0 0 .857-.858V4h-.717a.86.86 0 0 0-.6.246zM4.867 1H4.15a.86.86 0 0 0-.601.246L1.257 3.498A.86.86 0 0 0 1 4.11v.688h3.01a.857.857 0 0 0 .857-.858zM7 12V8.714h3.514c.71 0 1.286-.575 1.286-1.285V4h1.486C14.233 4 15 4.768 15 5.714v7.572c0 .947-.768 1.714-1.714 1.714H8.714A1.714 1.714 0 0 1 7 13.286z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
                Copy page
              </button>
              <button
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="More copy page options"
                class="Button-module_LY8NSq_button focus-ring-module_CnED2W_ring Button-module_LY8NSq_small Button-module_LY8NSq_isOnlyChild adjacent-button-layout-module_RWPzsq_adjacentButton colorScheme-module_uDd7va_auto"
                data-rac=""
                data-react-aria-pressable="true"
                data-via-adjacent="true"
                id="react-aria-:r1b:"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  aria-label="Svg Caret Down Icon"
                  aria-labelledby="react-aria-:r1f:"
                  class="Icon-module_yNB47q_icon"
                  fill="none"
                  height="14"
                  role="img"
                  slot="icon"
                  viewBox="0 0 16 16"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.679 10.796a.554.554 0 0 1-.858 0L4.64 6.976C4.32 6.594 4.582 6 5.069 6h6.362c.487 0 .748.594.43.976z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
          <p
            class="Text-module__2xN8W_text Text-module__2xN8W_body Text-module__2xN8W_large colorScheme-module_uDd7va_auto paragraph"
            data-display="p"
          >
            Content for step 4
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          5
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <section>
          <div
            class="copyMarkdownRow"
          >
            <h1
              class="Text-module__2xN8W_text Text-module__2xN8W_heading2 colorScheme-module_uDd7va_auto contains-headerlink sectionMargin titleMargin"
              data-display="h2"
            >
              Step 5
              <a
                class="headerlink heading"
                href="#step-5"
                title="Permalink to this heading"
              >
                <svg
                  aria-label="Svg Link Icon"
                  aria-labelledby="react-aria-:r1i:"
                  class="Icon-module_yNB47q_icon icon"
                  fill="none"
                  height="12"
                  role="img"
                  slot="icon"
                  viewBox="0 0 16 16"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.039 9.953a4 4 0 0 1-.327-.38l1.45-1.445q.11.226.294.414a1.553 1.553 0 0 0 2.203.01l2.884-2.872a1.57 1.57 0 0 0 .01-2.212 1.553 1.553 0 0 0-2.203-.01l-.379.377A.995.995 0 0 1 8.56 3.83a1.005 1.005 0 0 1 .006-1.418l.38-.377a3.54 3.54 0 0 1 5.024.023 3.58 3.58 0 0 1-.022 5.047l-2.884 2.871a3.54 3.54 0 0 1-5.025-.022"
                    fill="currentColor"
                  />
                  <path
                    d="M9.961 6.047q.18.181.327.38l-1.45 1.445q-.11-.226-.294-.414a1.553 1.553 0 0 0-2.203-.01L3.457 10.32a1.57 1.57 0 0 0-.01 2.212 1.553 1.553 0 0 0 2.203.01l.379-.377a.995.995 0 0 1 1.411.006 1.005 1.005 0 0 1-.006 1.418l-.38.377a3.54 3.54 0 0 1-5.024-.023 3.58 3.58 0 0 1 .022-5.047l2.884-2.871a3.54 3.54 0 0 1 5.025.022"
                    fill="currentColor"
                  />
                </svg>
                <div
                  class="headerBuffer"
                  id="step-5"
                />
              </a>
            </h1>
            <div
              aria-label="Copy page options"
              class="adjacent-button-layout-module_RWPzsq_adjacentButtonGroup ButtonGroup-module_Rql9sq_buttonGroup colorScheme-module_uDd7va_auto splitButton copyMarkdownButton"
              data-orientation="horizontal"
              data-variant="default"
              role="group"
            >
              <button
                class="Button-module_LY8NSq_button focus-ring-module_CnED2W_ring Button-module_LY8NSq_small adjacent-button-layout-module_RWPzsq_adjacentButton colorScheme-module_uDd7va_auto"
                data-rac=""
                data-react-aria-pressable="true"
                data-via-adjacent="true"
                id="react-aria-:r1k:"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-label="Svg Copy Icon"
                  aria-labelledby="react-aria-:r1m:"
                  class="Icon-module_yNB47q_icon"
                  fill="none"
                  height="14"
                  role="img"
                  slot="icon"
                  viewBox="0 0 16 16"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M1 5.714v4.572C1 11.233 1.768 12 2.714 12H5.75V7.11c0-.566.227-1.108.63-1.504l2.294-2.252q.151-.148.326-.262v-.378C9 1.768 8.232 1 7.286 1H5.8v3.429c0 .71-.576 1.285-1.286 1.285zm8-.928L7.257 6.498A.86.86 0 0 0 7 7.11v.688h3.01a.857.857 0 0 0 .857-.858V4h-.717a.86.86 0 0 0-.6.246zM4.867 1H4.15a.86.86 0 0 0-.601.246L1.257 3.498A.86.86 0 0 0 1 4.11v.688h3.01a.857.857 0 0 0 .857-.858zM7 12V8.714h3.514c.71 0 1.286-.575 1.286-1.285V4h1.486C14.233 4 15 4.768 15 5.714v7.572c0 .947-.768 1.714-1.714 1.714H8.714A1.714 1.714 0 0 1 7 13.286z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
                Copy page
              </button>
              <button
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="More copy page options"
                class="Button-module_LY8NSq_button focus-ring-module_CnED2W_ring Button-module_LY8NSq_small Button-module_LY8NSq_isOnlyChild adjacent-button-layout-module_RWPzsq_adjacentButton colorScheme-module_uDd7va_auto"
                data-rac=""
                data-react-aria-pressable="true"
                data-via-adjacent="true"
                id="react-aria-:r1n:"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  aria-label="Svg Caret Down Icon"
                  aria-labelledby="react-aria-:r1r:"
                  class="Icon-module_yNB47q_icon"
                  fill="none"
                  height="14"
                  role="img"
                  slot="icon"
                  viewBox="0 0 16 16"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.679 10.796a.554.554 0 0 1-.858 0L4.64 6.976C4.32 6.594 4.582 6 5.069 6h6.362c.487 0 .748.594.43.976z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
          <p
            class="Text-module__2xN8W_text Text-module__2xN8W_body Text-module__2xN8W_large colorScheme-module_uDd7va_auto paragraph"
            data-display="p"
          >
            Content for step 5
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          6
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <section>
          <div
            class="copyMarkdownRow"
          >
            <h1
              class="Text-module__2xN8W_text Text-module__2xN8W_heading2 colorScheme-module_uDd7va_auto contains-headerlink sectionMargin titleMargin"
              data-display="h2"
            >
              Step 6
              <a
                class="headerlink heading"
                href="#step-6"
                title="Permalink to this heading"
              >
                <svg
                  aria-label="Svg Link Icon"
                  aria-labelledby="react-aria-:r1u:"
                  class="Icon-module_yNB47q_icon icon"
                  fill="none"
                  height="12"
                  role="img"
                  slot="icon"
                  viewBox="0 0 16 16"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.039 9.953a4 4 0 0 1-.327-.38l1.45-1.445q.11.226.294.414a1.553 1.553 0 0 0 2.203.01l2.884-2.872a1.57 1.57 0 0 0 .01-2.212 1.553 1.553 0 0 0-2.203-.01l-.379.377A.995.995 0 0 1 8.56 3.83a1.005 1.005 0 0 1 .006-1.418l.38-.377a3.54 3.54 0 0 1 5.024.023 3.58 3.58 0 0 1-.022 5.047l-2.884 2.871a3.54 3.54 0 0 1-5.025-.022"
                    fill="currentColor"
                  />
                  <path
                    d="M9.961 6.047q.18.181.327.38l-1.45 1.445q-.11-.226-.294-.414a1.553 1.553 0 0 0-2.203-.01L3.457 10.32a1.57 1.57 0 0 0-.01 2.212 1.553 1.553 0 0 0 2.203.01l.379-.377a.995.995 0 0 1 1.411.006 1.005 1.005 0 0 1-.006 1.418l-.38.377a3.54 3.54 0 0 1-5.024-.023 3.58 3.58 0 0 1 .022-5.047l2.884-2.871a3.54 3.54 0 0 1 5.025.022"
                    fill="currentColor"
                  />
                </svg>
                <div
                  class="headerBuffer"
                  id="step-6"
                />
              </a>
            </h1>
            <div
              aria-label="Copy page options"
              class="adjacent-button-layout-module_RWPzsq_adjacentButtonGroup ButtonGroup-module_Rql9sq_buttonGroup colorScheme-module_uDd7va_auto splitButton copyMarkdownButton"
              data-orientation="horizontal"
              data-variant="default"
              role="group"
            >
              <button
                class="Button-module_LY8NSq_button focus-ring-module_CnED2W_ring Button-module_LY8NSq_small adjacent-button-layout-module_RWPzsq_adjacentButton colorScheme-module_uDd7va_auto"
                data-rac=""
                data-react-aria-pressable="true"
                data-via-adjacent="true"
                id="react-aria-:r20:"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-label="Svg Copy Icon"
                  aria-labelledby="react-aria-:r22:"
                  class="Icon-module_yNB47q_icon"
                  fill="none"
                  height="14"
                  role="img"
                  slot="icon"
                  viewBox="0 0 16 16"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M1 5.714v4.572C1 11.233 1.768 12 2.714 12H5.75V7.11c0-.566.227-1.108.63-1.504l2.294-2.252q.151-.148.326-.262v-.378C9 1.768 8.232 1 7.286 1H5.8v3.429c0 .71-.576 1.285-1.286 1.285zm8-.928L7.257 6.498A.86.86 0 0 0 7 7.11v.688h3.01a.857.857 0 0 0 .857-.858V4h-.717a.86.86 0 0 0-.6.246zM4.867 1H4.15a.86.86 0 0 0-.601.246L1.257 3.498A.86.86 0 0 0 1 4.11v.688h3.01a.857.857 0 0 0 .857-.858zM7 12V8.714h3.514c.71 0 1.286-.575 1.286-1.285V4h1.486C14.233 4 15 4.768 15 5.714v7.572c0 .947-.768 1.714-1.714 1.714H8.714A1.714 1.714 0 0 1 7 13.286z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
                Copy page
              </button>
              <button
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="More copy page options"
                class="Button-module_LY8NSq_button focus-ring-module_CnED2W_ring Button-module_LY8NSq_small Button-module_LY8NSq_isOnlyChild adjacent-button-layout-module_RWPzsq_adjacentButton colorScheme-module_uDd7va_auto"
                data-rac=""
                data-react-aria-pressable="true"
                data-via-adjacent="true"
                id="react-aria-:r23:"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  aria-label="Svg Caret Down Icon"
                  aria-labelledby="react-aria-:r27:"
                  class="Icon-module_yNB47q_icon"
                  fill="none"
                  height="14"
                  role="img"
                  slot="icon"
                  viewBox="0 0 16 16"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.679 10.796a.554.554 0 0 1-.858 0L4.64 6.976C4.32 6.594 4.582 6 5.069 6h6.362c.487 0 .748.594.43.976z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
          <p
            class="Text-module__2xN8W_text Text-module__2xN8W_body Text-module__2xN8W_large colorScheme-module_uDd7va_auto paragraph"
            data-display="p"
          >
            Content for step 6
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          7
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <section>
          <div
            class="copyMarkdownRow"
          >
            <h1
              class="Text-module__2xN8W_text Text-module__2xN8W_heading2 colorScheme-module_uDd7va_auto contains-headerlink sectionMargin titleMargin"
              data-display="h2"
            >
              Step 7
              <a
                class="headerlink heading"
                href="#step-7"
                title="Permalink to this heading"
              >
                <svg
                  aria-label="Svg Link Icon"
                  aria-labelledby="react-aria-:r2a:"
                  class="Icon-module_yNB47q_icon icon"
                  fill="none"
                  height="12"
                  role="img"
                  slot="icon"
                  viewBox="0 0 16 16"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.039 9.953a4 4 0 0 1-.327-.38l1.45-1.445q.11.226.294.414a1.553 1.553 0 0 0 2.203.01l2.884-2.872a1.57 1.57 0 0 0 .01-2.212 1.553 1.553 0 0 0-2.203-.01l-.379.377A.995.995 0 0 1 8.56 3.83a1.005 1.005 0 0 1 .006-1.418l.38-.377a3.54 3.54 0 0 1 5.024.023 3.58 3.58 0 0 1-.022 5.047l-2.884 2.871a3.54 3.54 0 0 1-5.025-.022"
                    fill="currentColor"
                  />
                  <path
                    d="M9.961 6.047q.18.181.327.38l-1.45 1.445q-.11-.226-.294-.414a1.553 1.553 0 0 0-2.203-.01L3.457 10.32a1.57 1.57 0 0 0-.01 2.212 1.553 1.553 0 0 0 2.203.01l.379-.377a.995.995 0 0 1 1.411.006 1.005 1.005 0 0 1-.006 1.418l-.38.377a3.54 3.54 0 0 1-5.024-.023 3.58 3.58 0 0 1 .022-5.047l2.884-2.871a3.54 3.54 0 0 1 5.025.022"
                    fill="currentColor"
                  />
                </svg>
                <div
                  class="headerBuffer"
                  id="step-7"
                />
              </a>
            </h1>
            <div
              aria-label="Copy page options"
              class="adjacent-button-layout-module_RWPzsq_adjacentButtonGroup ButtonGroup-module_Rql9sq_buttonGroup colorScheme-module_uDd7va_auto splitButton copyMarkdownButton"
              data-orientation="horizontal"
              data-variant="default"
              role="group"
            >
              <button
                class="Button-module_LY8NSq_button focus-ring-module_CnED2W_ring Button-module_LY8NSq_small adjacent-button-layout-module_RWPzsq_adjacentButton colorScheme-module_uDd7va_auto"
                data-rac=""
                data-react-aria-pressable="true"
                data-via-adjacent="true"
                id="react-aria-:r2c:"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-label="Svg Copy Icon"
                  aria-labelledby="react-aria-:r2e:"
                  class="Icon-module_yNB47q_icon"
                  fill="none"
                  height="14"
                  role="img"
                  slot="icon"
                  viewBox="0 0 16 16"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M1 5.714v4.572C1 11.233 1.768 12 2.714 12H5.75V7.11c0-.566.227-1.108.63-1.504l2.294-2.252q.151-.148.326-.262v-.378C9 1.768 8.232 1 7.286 1H5.8v3.429c0 .71-.576 1.285-1.286 1.285zm8-.928L7.257 6.498A.86.86 0 0 0 7 7.11v.688h3.01a.857.857 0 0 0 .857-.858V4h-.717a.86.86 0 0 0-.6.246zM4.867 1H4.15a.86.86 0 0 0-.601.246L1.257 3.498A.86.86 0 0 0 1 4.11v.688h3.01a.857.857 0 0 0 .857-.858zM7 12V8.714h3.514c.71 0 1.286-.575 1.286-1.285V4h1.486C14.233 4 15 4.768 15 5.714v7.572c0 .947-.768 1.714-1.714 1.714H8.714A1.714 1.714 0 0 1 7 13.286z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
                Copy page
              </button>
              <button
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="More copy page options"
                class="Button-module_LY8NSq_button focus-ring-module_CnED2W_ring Button-module_LY8NSq_small Button-module_LY8NSq_isOnlyChild adjacent-button-layout-module_RWPzsq_adjacentButton colorScheme-module_uDd7va_auto"
                data-rac=""
                data-react-aria-pressable="true"
                data-via-adjacent="true"
                id="react-aria-:r2f:"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  aria-label="Svg Caret Down Icon"
                  aria-labelledby="react-aria-:r2j:"
                  class="Icon-module_yNB47q_icon"
                  fill="none"
                  height="14"
                  role="img"
                  slot="icon"
                  viewBox="0 0 16 16"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.679 10.796a.554.554 0 0 1-.858 0L4.64 6.976C4.32 6.594 4.582 6 5.069 6h6.362c.487 0 .748.594.43.976z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
          <p
            class="Text-module__2xN8W_text Text-module__2xN8W_body Text-module__2xN8W_large colorScheme-module_uDd7va_auto paragraph"
            data-display="p"
          >
            Content for step 7
          </p>
        </section>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders with "normal" or YAML steps styling 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-top: 16px;
}

.dark-theme .emotion-0 {
  color: #E8EDEB;
  background-color: #001E2B;
}

.emotion-1 {
  gap: 16px;
}

.emotion-1 h2,
.emotion-1 h4,
.emotion-1 h5,
.emotion-1 h6 {
  margin-top: unset;
}

.emotion-1 h3 {
  margin-top: 2px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  position: relative;
  min-height: 59px;
}

.emotion-4 {
  border: 1.5px solid #C1C7C6;
  font-weight: 500;
  font-size: 16px;
  line-height: 28px;
  background-color: inherit;
  color: var(--opposite-color);
  height: 27px;
  width: 27px;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 section>*,
.emotion-6 ol p,
.emotion-6 ul p {
  margin-bottom: 16px;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          1
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <p
          class="Text-module__2xN8W_text Text-module__2xN8W_body Text-module__2xN8W_large colorScheme-module_uDd7va_auto paragraph"
          data-display="p"
        >
          Connect to a MongoDB deployment hosted on MongoDB Atlas, or a deployment hosted locally on your own machine.
        </p>
        <p
          class="Text-module__2xN8W_text Text-module__2xN8W_body Text-module__2xN8W_large colorScheme-module_uDd7va_auto paragraph"
          data-display="p"
        >
          <a
            class="link"
            href="/connect/#std-label-connect-run-compass"
          >
            To learn more, see Connect to MongoDB
          </a>
        </p>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          2
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <p
          class="Text-module__2xN8W_text Text-module__2xN8W_body Text-module__2xN8W_large colorScheme-module_uDd7va_auto paragraph"
          data-display="p"
        >
          Import data from CSV or JSON files into your MongoDB database.
        </p>
        <p
          class="Text-module__2xN8W_text Text-module__2xN8W_body Text-module__2xN8W_large colorScheme-module_uDd7va_auto paragraph"
          data-display="p"
        >
          <a
            class="link"
            href="/import-export/#std-label-compass-import-export"
          >
            To learn more, see Import and Export Data
          </a>
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
